--- a/app/views/tasks/_task_table.html.erb
+++ b/app/views/tasks/_task_table.html.erb
@@ -27,9 +27,9 @@
             <td><%= link_to task.title, task %></td>
             <td><%= task.priority %></td>
             <td>
-              <table class="fixed-table">
-                <tr>
-                  <td><%= task.description %></td>
+                  <table class="fixed-table">
+                    <tr>
+                  <td class="fixed-table"><%= task.description %></td>
                 </tr>
               </table>
             </td>
