--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -24,9 +24,10 @@ table.tablesorter thead tr .header {
 table.tablesorter tbody td {
     color: #3D3D3D;
     padding: 4px;
-    background-color: #FFF;
+    background-color: inherit;
     vertical-align: top;
     font-size: 12pt;
+    border:#080808;
 
 
 
