--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -71,7 +71,7 @@
           <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-info-sign info_icon"></span></a>
           <ul class="dropdown-menu" role="menu">
             <li> <%= link_to 'Help', '/projects/help',:class =>"default" %></li>
-            <li> <%= link_to 'About', '/projects/about',:class =>"default" %></li>
+            <li> <%= link_to 'About Us', '/projects/about',:class =>"default" %></li>
           </ul>
         </li>
       </ul>
