--- a/app/views/projects/about.html.erb
+++ b/app/views/projects/about.html.erb
@@ -1,9 +1,63 @@
-<h1>About Us</h1>
-<body>
-<p>
-  Hello, this is web for manage tasks,<br>
-  This site was created for the final project of a degree in computer science
-</p>
 
+<!DOCTYPE html>
+
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="">
+  <meta name="author" content="">
+  <link rel="icon" href="../../favicon.ico">
+
+  <title>Carousel Template for Bootstrap</title>
+
+  <!-- Bootstrap core CSS -->
+  <link href="../../dist/css/bootstrap.min.css" rel="stylesheet">
+
+  <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
+  <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
+  <script src="../../assets/js/ie-emulation-modes-warning.js"></script>
+
+  <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+  <!--[if lt IE 9]>
+  <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+  <![endif]-->
+
+  <!-- Custom styles for this template -->
+  <link href="carousel.css" rel="stylesheet">
+</head>
+
+<body>
+
+    <div class="container marketing ">
+
+        <div class=" jumbotron">
+          <center>
+            <h1>Eazy Task</h1>
+            <h3>As part of Computer Science degree project  <br />We have created a responsive application to help individuals and companies to organize and manage their tasks in an easy and shared environment. <br />From everywhere.</h3>
+          </center>
+        </div>
+
+      <center>
+          <div class="row">
+
+            <div class="col-lg-6">
+              <%= image_tag("nina_profile_pic.png", :alt => "rss feed", :class=>"img-circle" ,:size => "275x240") %>
+              <h2>Nina Goldenberg</h2>
+              <p>Contact:<br /> nina.sadovsky@perion.com</p>
+            </div><!-- /.col-lg-4 -->
+            <div class="col-lg-6">
+              <%= image_tag("natali_profile_pic.png", :alt => "rss feed", :class=>"img-circle",:size => "275x240") %>
+              <h2>Natali Behor</h2>
+              <p>Contact:<br /> natali.be@gmail.com</p>
+            </div><!-- /.col-lg-4 -->
+          </div><!-- /.row -->
+
+        <!--<%= link_to :back, :class =>"btn btn-lg btn-default task_btns" do %>
+            <i class="glyphicon glyphicon-arrow-left icons"></i> Back
+        <% end %>-->
+      </center>
+    </div>
 </body>
-<%= link_to 'Back', :back,:class=>"btn-default-bg", :type=>"button" %>
+</html>
