--- a/app/views/projects/help.html.erb
+++ b/app/views/projects/help.html.erb
@@ -1,13 +1,8 @@
-<h1>Help Page</h1>
-<body>
-<p>
-  Hello, so this web is simple to use :)<br><br>
-  for create a new project, you should click on the "New Project" button in the projects page.<br>
-  fot create a new task, you should click on the "new Task" button in the top bar.<br><br>
-  if you want to see which tasks have to specific project, then, in the projects page, you should click on the relative name project.
+</br>
+<div class="help_page">
+  <h1>Help Page</h1></br></br>
+  <div class="embed-responsive embed-responsive-16by9">
+    <iframe class="embed-responsive-item" src="//www.youtube.com/embed/pxKVZCyDG_Y" allowfullscreen style="width: 72 0px; height: 400px "></iframe>
+  </div>
 
-</p>
-
-
-</body>
-<%= link_to 'Back', :back, :type=>"button" %>
+</div>
