designed help page + assets on production

--- a/app/views/projects/help.html.erb
+++ b/app/views/projects/help.html.erb
@@ -2,7 +2,7 @@
 <div class="help_page">
   <h1>Help Page</h1></br></br>
   <div class="embed-responsive embed-responsive-16by9">
-    <iframe class="embed-responsive-item" src="//www.youtube.com/embed/pxKVZCyDG_Y" allowfullscreen style="width: 72 0px; height: 400px "></iframe>
+    <iframe class="embed-responsive-item" src="//www.youtube.com/embed/pxKVZCyDG_Y" allowfullscreen style="width: 720px; height: 400px "></iframe>
   </div>
 
 </div>
