--- a/app/views/projects/help.html.erb
+++ b/app/views/projects/help.html.erb
@@ -1,8 +1,40 @@
 </br>
-<div class="help_page">
+<div class="help_page jumbotron">
   <h1>Help Page</h1></br></br>
   <div class="embed-responsive embed-responsive-16by9">
     <iframe class="embed-responsive-item" src="//www.youtube.com/embed/pxKVZCyDG_Y" allowfullscreen style="width: 720px; height: 400px "></iframe>
+  </div>
+  <br>
+
+  <div class="help_text">
+    <p>
+      <h3 class="help_text_title">Create new Project</h3>
+      To create new project go to 'Home' page and click on the 'New Project' button at the end of the page.
+    </p>
+
+    <p>
+    <h3 class="help_text_title">Create new Task</h3>
+    To create new Task click on the 'New Task' button on the navigation bar at top.
+    </p>
+
+    <p>
+    <h3 class="help_text_title">Filter by task status</h3>
+    To filter the tasks on the specific page by the task status: TODO/DOING/DONE - click on the prefered status link (TODO/DOING/DONE)on the navigation bar at top.
+    </p>
+
+    <p>
+    <h3 class="help_text_title">Filter by 'Created by me'</h3>
+    To filter the tasks on the specific page so that the only tasks that will appear on page is the tasks created by you - click on the 'Created by me' button on the navigation bar at top.
+    </p>
+
+    <p>
+    <h3 class="help_text_title">Filter by 'Assign To me'</h3>
+    To filter the tasks on the specific page so that the only tasks that will appear on page is the tasks assigned to you - click on the 'Assign to me' button on the navigation bar at top.
+    </p>
+
+
+    <br>
+    <h3 class="help_text_title">For extra information please watch the video at the top of the page...</h3>
   </div>
 
 </div>
