--- a/app/assets/stylesheets/site.css
+++ b/app/assets/stylesheets/site.css
@@ -63,6 +63,7 @@ body {
     background-position: center center;
     background-attachment: fixed;
     background-size: cover;
+    background-size: cover;
     max-width: 100%;
     height: auto;
     width: auto\9;
