help page text 2

--- a/app/views/projects/help.html.erb
+++ b/app/views/projects/help.html.erb
@@ -1,10 +1,9 @@
-</br>
-<div class="help_page jumbotron">
-  <h1>Help Page</h1></br></br>
-  <div class="embed-responsive embed-responsive-16by9">
+<div class="jumbotron">
+  <h1 class="help_page">Help Page</h1></br>
+  <div class="embed-responsive embed-responsive-16by9 help_page">
     <iframe class="embed-responsive-item" src="//www.youtube.com/embed/pxKVZCyDG_Y" allowfullscreen style="width: 720px; height: 400px "></iframe>
   </div>
-  <br>
+
 
   <div class="help_text">
     <p>
